--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "workplease",
   "main": "index.js",
   "scripts": {
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "build" :  "webpack --config webpack.config.js"
   },
   "repository": {
     "type": "git",
