--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,21 @@
         "ostream": "cpp",
         "string": "cpp",
         "cmath": "cpp"
-    }
+    },
+    "sqltools.connections": [
+        {
+            "mysqlOptions": {
+                "authProtocol": "default"
+            },
+            "previewLimit": 50,
+            "server": "localhost",
+            "port": 3306,
+            "driver": "MySQL",
+            "name": "SG",
+            "group": "SG",
+            "database": "DB",
+            "username": "DB",
+            "password": "sss"
+        }
+    ]
 }
